trivy and spring 4.1.0 and formatting